added a new cell

--- a/Worldpopulation.ipynb
+++ b/Worldpopulation.ipynb
@@ -1297,10 +1297,314 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://ted:***@localhost:3306/ted\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Continent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Asia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Europe</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Africa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Oceania</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>North America</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>South America</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Continent\n",
+       "0           Asia\n",
+       "1         Europe\n",
+       "2         Africa\n",
+       "3        Oceania\n",
+       "4  North America\n",
+       "5  South America"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "SELECT DISTINCT Continent FROM population;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://ted:***@localhost:3306/ted\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Continent</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>2022Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Nigeria</td>\n",
+       "      <td>218541212</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>China</td>\n",
+       "      <td>1425887337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Russia</td>\n",
+       "      <td>144713314</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>338289857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>26177413</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>South America</td>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>215313498</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Continent        Country  2022Population\n",
+       "0         Africa        Nigeria       218541212\n",
+       "1           Asia          China      1425887337\n",
+       "2         Europe         Russia       144713314\n",
+       "3  North America  United States       338289857\n",
+       "4        Oceania      Australia        26177413\n",
+       "5  South America         Brazil       215313498"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "#showing the most populated country by continent\n",
+    "SELECT DISTINCT Continent, Country, `2022Population`\n",
+    "FROM population\n",
+    "WHERE (`2022Population`, Continent) IN (\n",
+    "    (SELECT MAX(`2022Population`), 'Asia' FROM population WHERE Continent = 'Asia'),\n",
+    "    (SELECT MAX(`2022Population`), 'Africa' FROM population WHERE Continent = 'Africa'),\n",
+    "    (SELECT MAX(2022Population), 'Europe' FROM population WHERE Continent = 'Europe'),\n",
+    "    (SELECT MAX(2022Population), 'Oceania' FROM population WHERE Continent = 'Oceania'),\n",
+    "    (SELECT MAX(2022Population), 'North America' FROM population WHERE Continent = 'North America'),\n",
+    "    (SELECT MAX(2022Population), 'South America' FROM population WHERE Continent = 'South America')\n",
+    "    \n",
+    ")\n",
+    "ORDER BY Continent;\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://ted:***@localhost:3306/ted\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Continent</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>2022Population</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Seychelles</td>\n",
+       "      <td>107118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>Brunei</td>\n",
+       "      <td>449002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>Vatican City</td>\n",
+       "      <td>510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>Montserrat</td>\n",
+       "      <td>4390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Tokelau</td>\n",
+       "      <td>1871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>South America</td>\n",
+       "      <td>Falkland Islands</td>\n",
+       "      <td>3780</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Continent           Country  2022Population\n",
+       "0         Africa        Seychelles          107118\n",
+       "1           Asia            Brunei          449002\n",
+       "2         Europe      Vatican City             510\n",
+       "3  North America        Montserrat            4390\n",
+       "4        Oceania           Tokelau            1871\n",
+       "5  South America  Falkland Islands            3780"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "#showing the least populated country by continent\n",
+    "SELECT DISTINCT Continent, Country, `2022Population`\n",
+    "FROM population\n",
+    "WHERE (`2022Population`, Continent) IN (\n",
+    "    (SELECT MIN(`2022Population`), 'Asia' FROM population WHERE Continent = 'Asia'),\n",
+    "    (SELECT MIN(`2022Population`), 'Africa' FROM population WHERE Continent = 'Africa'),\n",
+    "    (SELECT MIN(2022Population), 'Europe' FROM population WHERE Continent = 'Europe'),\n",
+    "    (SELECT MIN(2022Population), 'Oceania' FROM population WHERE Continent = 'Oceania'),\n",
+    "    (SELECT MIN(2022Population), 'North America' FROM population WHERE Continent = 'North America'),\n",
+    "    (SELECT MIN(2022Population), 'South America' FROM population WHERE Continent = 'South America')\n",
+    "    \n",
+    ")\n",
+    "ORDER BY Continent;\n"
+   ]
   }
  ],
  "metadata": {
