--- a/Worldpopulation.ipynb
+++ b/Worldpopulation.ipynb
@@ -165,7 +165,7 @@
      "output_type": "stream",
      "text": [
       " * mysql://ted:***@localhost:3306/ted\n",
-      "702 rows affected.\n"
+      "234 rows affected.\n"
      ]
     },
     {
@@ -330,7 +330,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>697</th>\n",
+       "      <th>229</th>\n",
        "      <td>226</td>\n",
        "      <td>WLF</td>\n",
        "      <td>Wallis and Futuna</td>\n",
@@ -350,7 +350,7 @@
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>698</th>\n",
+       "      <th>230</th>\n",
        "      <td>172</td>\n",
        "      <td>ESH</td>\n",
        "      <td>Western Sahara</td>\n",
@@ -370,7 +370,7 @@
        "      <td>0.01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>699</th>\n",
+       "      <th>231</th>\n",
        "      <td>46</td>\n",
        "      <td>YEM</td>\n",
        "      <td>Yemen</td>\n",
@@ -390,7 +390,7 @@
        "      <td>0.42</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>700</th>\n",
+       "      <th>232</th>\n",
        "      <td>63</td>\n",
        "      <td>ZMB</td>\n",
        "      <td>Zambia</td>\n",
@@ -410,7 +410,7 @@
        "      <td>0.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>701</th>\n",
+       "      <th>233</th>\n",
        "      <td>74</td>\n",
        "      <td>ZWE</td>\n",
        "      <td>Zimbabwe</td>\n",
@@ -431,7 +431,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>702 rows × 17 columns</p>\n",
+       "<p>234 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -442,11 +442,11 @@
        "3     213  ASM     American Samoa         Pago Pago   Oceania           44273   \n",
        "4     203  AND            Andorra  Andorra la Vella    Europe           79824   \n",
        "..    ...  ...                ...               ...       ...             ...   \n",
-       "697   226  WLF  Wallis and Futuna          Mata-Utu   Oceania           11572   \n",
-       "698   172  ESH     Western Sahara          El Aaiún    Africa          575986   \n",
-       "699    46  YEM              Yemen             Sanaa      Asia        33696614   \n",
-       "700    63  ZMB             Zambia            Lusaka    Africa        20017675   \n",
-       "701    74  ZWE           Zimbabwe            Harare    Africa        16320537   \n",
+       "229   226  WLF  Wallis and Futuna          Mata-Utu   Oceania           11572   \n",
+       "230   172  ESH     Western Sahara          El Aaiún    Africa          575986   \n",
+       "231    46  YEM              Yemen             Sanaa      Asia        33696614   \n",
+       "232    63  ZMB             Zambia            Lusaka    Africa        20017675   \n",
+       "233    74  ZWE           Zimbabwe            Harare    Africa        16320537   \n",
        "\n",
        "     2020Population  2015Population  2010Population  2000Population  \\\n",
        "0          38972230        33753499        28189672        19542982   \n",
@@ -455,11 +455,11 @@
        "3             46189           51368           54849           58230   \n",
        "4             77700           71746           71519           66097   \n",
        "..              ...             ...             ...             ...   \n",
-       "697           11655           12182           13142           14723   \n",
-       "698          556048          491824          413296          270375   \n",
-       "699        32284046        28516545        24743946        18628700   \n",
-       "700        18927715        16248230        13792086         9891136   \n",
-       "701        15669666        14154937        12839771        11834676   \n",
+       "229           11655           12182           13142           14723   \n",
+       "230          556048          491824          413296          270375   \n",
+       "231        32284046        28516545        24743946        18628700   \n",
+       "232        18927715        16248230        13792086         9891136   \n",
+       "233        15669666        14154937        12839771        11834676   \n",
        "\n",
        "     1990Population  1980Population  1970Population  Area(Km2)  Density(KM2)  \\\n",
        "0          10694796        12486631        10752971     652230       63.0587   \n",
@@ -468,11 +468,11 @@
        "3             47818           32886           27075        199      222.4770   \n",
        "4             53569           35611           19860        468      170.5640   \n",
        "..              ...             ...             ...        ...           ...   \n",
-       "697           13454           11315            9377        142       81.4930   \n",
-       "698          178529          116775           76371     266000        2.1654   \n",
-       "699        13375121         9204938         6843607     527968       63.8232   \n",
-       "700         7686401         5720438         4281671     752612       26.5976   \n",
-       "701        10113893         7049926         5202918     390757       41.7665   \n",
+       "229           13454           11315            9377        142       81.4930   \n",
+       "230          178529          116775           76371     266000        2.1654   \n",
+       "231        13375121         9204938         6843607     527968       63.8232   \n",
+       "232         7686401         5720438         4281671     752612       26.5976   \n",
+       "233        10113893         7049926         5202918     390757       41.7665   \n",
        "\n",
        "     Growthrate  Worldpopulationpercentage  \n",
        "0        1.0257                       0.52  \n",
@@ -481,13 +481,13 @@
        "3        0.9831                       0.00  \n",
        "4        1.0100                       0.00  \n",
        "..          ...                        ...  \n",
-       "697      0.9953                       0.00  \n",
-       "698      1.0184                       0.01  \n",
-       "699      1.0217                       0.42  \n",
-       "700      1.0280                       0.25  \n",
-       "701      1.0204                       0.20  \n",
+       "229      0.9953                       0.00  \n",
+       "230      1.0184                       0.01  \n",
+       "231      1.0217                       0.42  \n",
+       "232      1.0280                       0.25  \n",
+       "233      1.0204                       0.20  \n",
        "\n",
-       "[702 rows x 17 columns]"
+       "[234 rows x 17 columns]"
       ]
      },
      "execution_count": 7,
@@ -498,7 +498,7 @@
    "source": [
     "%%sql\n",
     "#showing table info\n",
-    "SELECT * FROM population;"
+    "SELECT DISTINCT * FROM population;"
    ]
   },
   {
@@ -511,7 +511,7 @@
      "output_type": "stream",
      "text": [
       " * mysql://ted:***@localhost:3306/ted\n",
-      "3 rows affected.\n"
+      "1 rows affected.\n"
      ]
     },
     {
@@ -545,25 +545,13 @@
        "      <td>China</td>\n",
        "      <td>1425887337</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>China</td>\n",
-       "      <td>1425887337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>China</td>\n",
-       "      <td>1425887337</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "  Country  MostPopulated\n",
-       "0   China     1425887337\n",
-       "1   China     1425887337\n",
-       "2   China     1425887337"
+       "0   China     1425887337"
       ]
      },
      "execution_count": 8,
@@ -574,7 +562,7 @@
    "source": [
     "%%sql\n",
     "#showing the most populated country\n",
-    "SELECT Country, 2022Population AS MostPopulated FROM population\n",
+    "SELECT DISTINCT Country, 2022Population AS MostPopulated FROM population\n",
     " WHERE 2022Population =\n",
     "(SELECT MAX(2022Population) FROM population);\n"
    ]
@@ -589,7 +577,7 @@
      "output_type": "stream",
      "text": [
       " * mysql://ted:***@localhost:3306/ted\n",
-      "3 rows affected.\n"
+      "1 rows affected.\n"
      ]
     },
     {
@@ -623,25 +611,13 @@
        "      <td>Vatican City</td>\n",
        "      <td>510</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Vatican City</td>\n",
-       "      <td>510</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Vatican City</td>\n",
-       "      <td>510</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "        Country  LeastPopulated\n",
-       "0  Vatican City             510\n",
-       "1  Vatican City             510\n",
-       "2  Vatican City             510"
+       "0  Vatican City             510"
       ]
      },
      "execution_count": 9,
@@ -652,7 +628,7 @@
    "source": [
     "%%sql\n",
     "#showing the least populated country\n",
-    "SELECT Country, 2022Population AS LeastPopulated FROM population\n",
+    "SELECT DISTINCT Country, 2022Population AS LeastPopulated FROM population\n",
     " WHERE 2022Population = \n",
     "(SELECT MIN(2022Population) FROM population);\n"
    ]
@@ -697,7 +673,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>11082409983</td>\n",
+       "      <td>14776546644</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -705,7 +681,7 @@
       ],
       "text/plain": [
        "  World_population_1970\n",
-       "0           11082409983"
+       "0           14776546644"
       ]
      },
      "execution_count": 10,
@@ -759,7 +735,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>13327201113</td>\n",
+       "      <td>17769601484</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -767,7 +743,7 @@
       ],
       "text/plain": [
        "  World_population_1980\n",
-       "0           13327201113"
+       "0           17769601484"
       ]
      },
      "execution_count": 11,
@@ -821,7 +797,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>15942574995</td>\n",
+       "      <td>21256766660</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -829,7 +805,7 @@
       ],
       "text/plain": [
        "  World_population_1990\n",
-       "0           15942574995"
+       "0           21256766660"
       ]
      },
      "execution_count": 12,
@@ -883,7 +859,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>18441167109</td>\n",
+       "      <td>24588222812</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -891,7 +867,7 @@
       ],
       "text/plain": [
        "  World_population_2000\n",
-       "0           18441167109"
+       "0           24588222812"
       ]
      },
      "execution_count": 13,
@@ -945,7 +921,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>20951354994</td>\n",
+       "      <td>27935139992</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -953,7 +929,7 @@
       ],
       "text/plain": [
        "  World_population_2010\n",
-       "0           20951354994"
+       "0           27935139992"
       ]
      },
      "execution_count": 14,
@@ -1007,7 +983,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>22274429283</td>\n",
+       "      <td>29699239044</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1015,7 +991,7 @@
       ],
       "text/plain": [
        "  World_population_2015\n",
-       "0           22274429283"
+       "0           29699239044"
       ]
      },
      "execution_count": 15,
@@ -1069,7 +1045,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>23517751809</td>\n",
+       "      <td>31357002412</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1077,7 +1053,7 @@
       ],
       "text/plain": [
        "  World_population_2020\n",
-       "0           23517751809"
+       "0           31357002412"
       ]
      },
      "execution_count": 16,
@@ -1131,7 +1107,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>23920239126</td>\n",
+       "      <td>31893652168</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1139,7 +1115,7 @@
       ],
       "text/plain": [
        "  World_population_2022\n",
-       "0           23920239126"
+       "0           31893652168"
       ]
      },
      "execution_count": 17,
@@ -1219,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1203,7 @@
      "output_type": "stream",
      "text": [
       " * mysql://ted:***@localhost:3306/ted\n",
-      "3 rows affected.\n"
+      "1 rows affected.\n"
      ]
     },
     {
@@ -1261,28 +1237,16 @@
        "      <td>Ukraine</td>\n",
        "      <td>0.912</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Ukraine</td>\n",
-       "      <td>0.912</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ukraine</td>\n",
-       "      <td>0.912</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "   Country  LowestGrowthRate\n",
-       "0  Ukraine             0.912\n",
-       "1  Ukraine             0.912\n",
-       "2  Ukraine             0.912"
+       "0  Ukraine             0.912"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1290,14 +1254,14 @@
    "source": [
     "%%sql\n",
     "#showing the country with the least growth rate in percentage\n",
-    "SELECT Country, Growthrate AS LowestGrowthRate FROM population\n",
+    "SELECT DISTINCT Country, Growthrate AS LowestGrowthRate FROM population\n",
     "WHERE Growthrate =\n",
     "(SELECT MIN(Growthrate) FROM population)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1335,7 @@
        "5  South America"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1471,7 +1435,7 @@
        "5  South America         Brazil       215313498"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1496,7 +1460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1548,7 @@
        "5  South America  Falkland Islands            3780"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
