added an extrta cell

--- a/Worldpopulation.ipynb
+++ b/Worldpopulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sql extension is already loaded. To reload it, use:\n",
+      "  %reload_ext sql\n"
+     ]
+    }
+   ],
    "source": [
     "#configuring mysql in jupyter\n",
     "%load_ext sql\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +49,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " * mysql://ted:***@localhost:3306/ted\n",
       "(MySQLdb._exceptions.OperationalError) (1050, \"Table 'population' already exists\")\n",
       "[SQL: #creating a table to load data into from a csv file\n",
       "CREATE TABLE population (\n",
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +153,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +500,7 @@
        "[234 rows x 17 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +564,7 @@
        "0   China     1425887337"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +630,7 @@
        "0  Vatican City             510"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +683,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>14776546644</td>\n",
+       "      <td>18470683305</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -681,10 +691,10 @@
       ],
       "text/plain": [
        "  World_population_1970\n",
-       "0           14776546644"
+       "0           18470683305"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -697,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +745,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>17769601484</td>\n",
+       "      <td>22212001855</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -743,10 +753,10 @@
       ],
       "text/plain": [
        "  World_population_1980\n",
-       "0           17769601484"
+       "0           22212001855"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +807,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>21256766660</td>\n",
+       "      <td>26570958325</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -805,10 +815,10 @@
       ],
       "text/plain": [
        "  World_population_1990\n",
-       "0           21256766660"
+       "0           26570958325"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +869,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>24588222812</td>\n",
+       "      <td>30735278515</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -867,10 +877,10 @@
       ],
       "text/plain": [
        "  World_population_2000\n",
-       "0           24588222812"
+       "0           30735278515"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +931,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>27935139992</td>\n",
+       "      <td>34918924990</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -929,10 +939,10 @@
       ],
       "text/plain": [
        "  World_population_2010\n",
-       "0           27935139992"
+       "0           34918924990"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +993,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>29699239044</td>\n",
+       "      <td>37124048805</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -991,10 +1001,10 @@
       ],
       "text/plain": [
        "  World_population_2015\n",
-       "0           29699239044"
+       "0           37124048805"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1045,7 +1055,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>31357002412</td>\n",
+       "      <td>39196253015</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1053,10 +1063,10 @@
       ],
       "text/plain": [
        "  World_population_2020\n",
-       "0           31357002412"
+       "0           39196253015"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1069,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1107,7 +1117,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>31893652168</td>\n",
+       "      <td>39867065210</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1115,10 +1125,10 @@
       ],
       "text/plain": [
        "  World_population_2022\n",
-       "0           31893652168"
+       "0           39867065210"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1192,7 @@
        "0  Afghanistan             1.0691"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1256,7 @@
        "0  Ukraine             0.912"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1335,7 +1345,7 @@
        "5  South America"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1347,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1445,7 @@
        "5  South America         Brazil       215313498"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1460,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1548,7 +1558,7 @@
        "5  South America  Falkland Islands            3780"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,6 +1578,103 @@
     "    \n",
     ")\n",
     "ORDER BY Continent;\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql://ted:***@localhost:3306/ted\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Continent</th>\n",
+       "      <th>AvgPopulation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Asia</td>\n",
+       "      <td>94427665.4800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>South America</td>\n",
+       "      <td>31201186.2857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>25030367.2281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>North America</td>\n",
+       "      <td>15007403.4000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>14862950.7600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>1958198.0000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Continent  AvgPopulation\n",
+       "0           Asia  94427665.4800\n",
+       "1  South America  31201186.2857\n",
+       "2         Africa  25030367.2281\n",
+       "3  North America  15007403.4000\n",
+       "4         Europe  14862950.7600\n",
+       "5        Oceania   1958198.0000"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "#shows the average population per each continent\n",
+    "SELECT Continent, AVG(2022Population) AS AvgPopulation\n",
+    "FROM population\n",
+    "GROUP BY Continent\n",
+    "ORDER BY AvgPopulation DESC;\n"
    ]
   }
  ],
